# thorin

./: .gitmodules  CMakeLists.txt
cmake/: thorin-config.cmake.in
gtest/: CMakeLists.txt  test.cpp
include/thorin/: def.h  lam.h  lattice.h  rewrite.h  tables.h  tuple.h  world.h
include/thorin/analyses/: cfg.h
include/thorin/pass/: pass.h
include/thorin/util/: cast.h  stream.h
src/: CMakeLists.txt  axiom.cpp  check.cpp  def.cpp  error.cpp  normalize.cpp  rewrite.cpp  stream.cpp  tuple.cpp  world.cpp
src/analyses/: deptree.cpp  looptree.cpp  scope.cpp
src/pass/: optimize.cpp  pass.cpp
src/pass/fp/: copy_prop.cpp
src/pass/rw/: ret_wrap.cpp
src/thorin/: CMakeLists.txt  axiom.h  debug.h  def.cpp  def.h  error.cpp  lam.cpp  lam.h  lattice.cpp  normalize.cpp  normalize.h  stream.cpp  tables.h  tuple.cpp  world.cpp  world.h
src/thorin/analyses/: cfg.cpp  looptree.h  schedule.cpp  scope.cpp  scope.h
src/thorin/be/llvm/: llvm.cpp  nvvm.cpp
src/thorin/pass/fp/: beta_red.cpp  eta_conv.cpp  scalarize.cpp  ssa_constr.cpp
src/thorin/pass/rw/: bound_elim.cpp  grad_gen.cpp  grad_gen.h  partial_eval.cpp
src/thorin/util/: array.h  hash.h  indexmap.h  stream.h  types.h
src/util/: hash.cpp
unit-test/: CMakeLists.txt
